chore: update domain from www.crazykk.tech to game.chuankangkk.top

--- a/404.html
+++ b/404.html
@@ -222,15 +222,15 @@ input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit
 </style>
 </head>
 <body>
-<a href="https://www.crazykk.tech/">
+<a href="https://game.chuankangkk.top/">
 <div class="system">
-		<img src = 'https://www.crazykk.tech/kk.jpg' />
+		<img src = 'https://game.chuankangkk.top/kk.jpg' />
 	<div class="title">
 		<h2>传康kk很懂你们的心情</h2>
-		<h4>网站域名www.crazykk.tech</h4>
+		<h4>网站域名game.chuankangkk.top</h4>
 		<h4>qq1837620622</h4>
 	</div>	
 </div></a>
-<meta http-equiv="refresh" content="3; url=https://www.crazykk.tech/">
+<meta http-equiv="refresh" content="3; url=https://game.chuankangkk.top/">
 </body>
 </html>
