--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		    -->
 
 			<div class="logo">
-			<a href="https://www.crazykk.tech" target="right" class="simple-text"><img src="images/logo.png " width="30" height="30"/>传康主页</a>
+			<a href="https://game.chuankangkk.top" target="right" class="simple-text"><img src="images/logo.png " width="30" height="30"/>传康主页</a>
 			</div>
 
 	    	<div class="sidebar-wrapper">
@@ -85,7 +85,7 @@
 	                    </a>
 	                </li> 
 					<li>
-	                    <a href="https://www.crazykk.tech" target="right" >
+	                    <a href="https://game.chuankangkk.top" target="right" >
 	                        <i class="fa fa-user-circle"></i>
 	                        <p>联系传康</p>
 	                    </a>
@@ -94,7 +94,7 @@
 					
 					</ul>
 			<div align="center">
-			<hr><a href="https://www.crazykk.tech">传康云在线游戏</a>版权所有
+			<hr><a href="https://game.chuankangkk.top">传康云在线游戏</a>版权所有
 			</div>
 			</div>
 	    </div>
