--- a/link/index.html
+++ b/link/index.html
@@ -18,22 +18,24 @@ content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=
 <div class="wrapper">
 	<div class="profile-card js-profile-card">
 		<div class="profile-card__img">
-			<img src="https://www.crazykk.tech/kk.jpg" alt="profile card">
+			<img src="https://game.chuankangkk.top/kk.jpg" alt="profile card">
 		</div>
 	
 		<div class="profile-card__cnt js-profile-cnt">
 			<div class="profile-card__name">传康KK科技小游戏平台</div>
-			<div class="profile-card__txt">www.crazykk.tech</div>
+			<div class="profile-card__txt">game.chuankangkk.top</div>
 			<div class="profile-card-loc">
 				<span class="profile-card-loc__icon">
 					<svg class="icon"><use xlink:href="#icon-location"></use></svg>
 				</span>
 				<span class="profile-card-loc__txt">传康KK科技小游戏平台</span>
 			</div>
-		
+		
+
 			</div>
 <div class="profile-card-ctr">
-	    <a href="https://www.crazykk.tech"><button class="profile-card__button button--blue">联系传康</button></a><br>
+	    <a href="https://game.chuankangkk.top"><button class="profile-card__button button--blue">联系传康</button></a><br>
+
 	
 	</div>
 
