--- a/images/404.html
+++ b/images/404.html
@@ -222,15 +222,15 @@ input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit
 </style>
 </head>
 <body>
-<a href="https://www.crazykk.tech">
+<a href="https://game.chuankangkk.top">
 <div class="system">
-		<img src = 'https://www.crazykk.tech/kk.jpg' />
+		<img src = 'https://game.chuankangkk.top/kk.jpg' />
 	<div class="title">
 		<h2>&#20225;&#19994;&#29483;&#28304;&#30721;&#32593;&#21451;&#24773;&#25552;&#31034;</h2>
 		<h4>&#12304;&#20225;&#19994;&#29483;&#28304;&#30721;&#32593;&#12305;&#25552;&#20379;&#20840;&#32593;&#20248;&#36136;&#28304;&#30721;&#36164;&#28304;&#19979;&#36733;&#65292;&#33268;&#21147;&#21019;&#36896;&#19968;&#20010;&#39640;&#36136;&#37327;&#28304;&#30721;&#36164;&#28304;&#20998;&#20139;&#24179;&#21488;&#12290;</h4>
 		<h4>&#19968;&#20010;&#28023;&#37327;&#28304;&#30721;&#36164;&#28304;&#32593;&#31449;&#65281;</h4>
 	</div>	
 </div></a>
-<meta http-equiv="refresh" content="3; url=https://www.crazykk.tech">
+<meta http-equiv="refresh" content="3; url=https://game.chuankangkk.top">
 </body>
 </html>
